# PlatformerGame

./: .clang-format  CMakeLists.txt  clean.sh  configure.sh  debug.sh  run.sh
asserts/: four-sessions.tsx  magic-cliffs.tmx  magic-cliffs.tsx  test-map.tmx
asserts/levels/: deep-forest-main.tsx  deep-forest-props.tsx  deep-forest.tmx
src/: .Camera.cpp.swp  .Level.cpp.swp  .Player.cpp.swp  .Player.h.swp  .Slime.cpp.swp  .Slime.h.swp  .Sword.cpp.swp  .Sword.h.swp  .Weapon.cpp.swp  .Weapon.h.swp  Ability.h  AdventureState.cpp  AdventureState.h  Adventurer.cpp  Adventurer.h  AnimatedParticle.cpp  AnimatedParticle.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssertManager.cpp  AssertManager.h  Audio.cpp  Audio.h  Axe.cpp  Axe.h  Background.cpp  Background.h  BaseGameObject.cpp  BaseGameObject.h  BasicAttack.cpp  BasicAttack.h  BloodStainParticle.cpp  BloodStainParticle.h  BoarWarrior.cpp  BoarWarrior.h  Builder.cpp  Builder.h  Camera.cpp  (+193 more)
